--- a/Website/index.html
+++ b/Website/index.html
@@ -2,27 +2,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Star Course UIUC</title>
-<!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- Custom CSS -->
-<link href="css/theme.css" rel="stylesheet">
-<!-- Custom Fonts -->
-<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<title>Star Course UIUC</title>
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="css/theme.css" rel="stylesheet">
+	<!-- Custom Fonts -->
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+			<![endif]-->
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+	<script>
+		// Hide poster div on page load
+		var x = document.getElementById('posters');
+		x.style.display = 'none';
+	</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
@@ -62,6 +67,9 @@
 			<li>
 				<a href="#events">Events</a>
 			</li>
+			<!-- <li>
+				<a href="history.html#history">History</a>
+			</li> -->
 			<li>
 				<a href="#contact">Contact</a>
 			</li>
@@ -98,7 +106,7 @@
 		<h2 class="text-center">ABOUT US</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p> 
-				Star Course is a live-concert promotion and production organization run by students for  
+				Star Course is a live-concert promotion and production organization run by students for fellow UIUC  
 				students and for the Champaign-Urbana community. Members participate in all levels of event planning – 
 				from booking artists and designing ad campaigns to organizing ticket sales or staffing house and backstage positions on 
 				the day of show. Star Course is about diversity in music, creativity in learning, and friendship in community.
@@ -106,30 +114,29 @@
 			<p>
 				<b>History:</b> Star Course is the University of Illinois’s oldest student-run organization dating back to 1892. Designed 
 				to contract, promote, and stage campus entertainment, Star Course brought its first orchestra 
-				to the University in 1912. Throughout the past century the organization has broadened its scope 
-				to jazz, alternative, rock, comedy, R&B, hip-hop, and soul acts. Today Star Course focuses on providing 
-				a diverse selection of popular entertainment to the University and C-U community. In 2017, Star Course celebrated 
-				125 years of entertainment at UIUC.
-			</p>
+				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock, 
+				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular 
+				entertainment to the University and the C-U community. In 2017, Star Course celebrated 125 years of entertainment at UIUC.
+			</p> 
 			<p>
 				<b>Organization:</b> Star Course is a non-profit, student-operated organization under the advisory of the State Farm Center 
 				in Champaign, IL. As a university talent-buying group, Star Course is remarkably independent. While many 
-				schools have small entertainment boards comprised of both faculty and students, Star Course is all students – top to bottom.
+				schools have small entertainment boards comprised of both faculty and students, Star Course is all students from top to bottom.
 			</p>
 			<p>
-				<b>Leadership:</b> Each year, Star Course selects 2 student Senior Managers and 12 Junior Managers to lead staff through 
+				<b>Leadership:</b> Each year, Star Course selects 2 Senior Managers and 12 Junior Managers to lead staff through 
 				the promotion and production process. Senior Managers contract an average of 2 to 3 shows per semester, 
 				and Junior Managers direct staff through each phase of show preparation, marketing, and production.
 			</p>
 			<p>
 				<b>Experience:</b> Star Course members are required to participate in both non-day of show and day of show activies. All members will assist
-				with the Marketing committee and have the option of working with either the Tickets or Stage & Production 
-				committees on day of show. Star Course is devoted to providing a student learning opportunity for members about the inner workings
+				with the Marketing committee in the weeks leading up to a show and will also have the option of working with either the Tickets or Stage & Production 
+				committees for the day of show. Star Course is devoted to providing a student learning opportunity for members about the inner workings
 				of the music industy.
 			</p>
 			<p>
 				<b>Committment:</b> Staff members should be prepared for all-staff meetings, committee meetings, and regular member events. Show dates vary 
-				throughout the semester, and time commitment varies with the climate of the concert industry. Due to the short-term, 
+				throughout the semester and time commitment varies with the climate of the concert industry. Due to the short-term, 
 				fast-paced nature of the industry, staff should be prepared to be on-call and ready for action throughout the semester.
 			</p>
 			<p>
@@ -180,13 +187,13 @@
 			</p>
 			<p>	
 				<b>Marketing:</b> Oversees group marketing efforts and executes marketing plan by distributing advertising materials to the community. 
-				Organizes contests and other on-campus or online promotions.
+				Organizes contests and other online or on-campus promotions.
 			</p>
 			<p>	
-				<b>Member Relations:</b> Manages staff roster and organizes internal communication. Monitors staff involvement to determine show assignments.
+				<b>Member Relations:</b> Manages staff roster, monitors staff involvement, and organizes internal communication. 
 			</p>
 			<p>	
-				<b>Personnel:</b> Plans social events to promote community among members.
+				<b>Personnel:</b> Plans and hosts social events throughout the school year to promote community among members.
 			</p>
 			<p>	
 				<b>Social Media:</b> Manages online presence and social media accounts.
@@ -232,45 +239,79 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
+			<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p>
+			<p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</p>
+			<h3>PREVIOUS EVENTS</h3>
+			<script>
+				function showPosters() {
+	   			var x = document.getElementById('posters');
+    			if (x.style.display == 'none') {	
+        		x.style.display = 'block';
+						document.getElementById("posterButtonI").className = "fa fa-caret-up fa-fw";
+						document.getElementById("posterButtonSpan").textContent = "Click to hide";
+    			} else {
+        		x.style.display = 'none';
+						document.getElementById("posterButtonI").className = "fa fa-caret-down fa-fw";
+						document.getElementById("posterButtonSpan").textContent = "Click to show";
+    			}
+				}
+			</script>
 			<p>
-				Find us at Quad Day on Sunday August 27th, 2017!
+				<button id="posterButton" class="btnghost" onclick="showPosters()">
+					<i id="posterButtonI" class="fa fa-caret-down fa-fw"></i><span id="posterButtonSpan">Click to show</span>
+				</button>
 			</p>
-			<p><br></p>
+			<div id="posters" style="display:none;">
+				<br>
+				<!-- TODO: Use this block to add new seasons to this section
+				<div class="row">
+					<h4 class="text-center"> 20XX - 20YY Season: </h4>
+					<img src="img/posters/[image file name]" title="[artist name]" height="250">
+					<img src="img/posters/[image file name]" title="[artist name]" height="250">
+					<img src="img/posters/[image file name]" title="[artist name]" height="250">
+					<img src="img/posters/[image file name]" title="[artist name]" height="250">
+					<p><br></p>
+				</div>
+				<br>
+				-->
+				<div class="row">
+					<h4 class="text-center"> 2016 - 2017 Season: </h4>
+					<img src="img/posters/neon%20indian.png" title="Neon Indian" height="250">
+					<img src="img/posters/American%20Football.png" title="American Football" height="250">
+					<img src="img/posters/Vince.png" title="Vince Staples" height="250">
+					<img src="img/posters/noname.jpg" title="Noname" height="250">
+					<p><br></p>
+				</div>
+				<br>
+				<div class="row">		
+					<h4 class="text-center"> 2015 - 2016 Season: </h4>
+					<img src="img/posters/nate%20ruess.png" title="Nate Ruess" height="250">
+					<img src="img/posters/rae%20sremmurd.png" title="Rae Sremmurd" height="250">
+					<img src="img/posters/ryn%20weaver.png" title="Ryn Weaver" height="250">
+					<img src="img/posters/father%20john%20misty.jpg" title="Father John Misty" height="250">
+					<p><br></p>
+				</div>
+				<br>
+				<div class="row">		
+					<h4 class="text-center"> 2014 - 2015 Season: </h4>
+					<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" height="200">
+					<img src="img/posters/mac.jpg" title="Mac DeMarco" width="200">
+					<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" height="200">
+					<img src="img/posters/bo%20burnham.jpg" title="Bo Burnham" height="200">
+					<img src="img/posters/ilovemakonnen.jpg" title="ILOVEMAKONNEN" height="200">
+					<p><br></p>
+				</div>
+				<br>
+				<div class="row">		
+					<h4 class="text-center"> 2013 - 2014 Season: </h4>
+					<img src="img/posters/caseyjames.jpg" title="Casey James" height="250">
+					<img src="img/posters/baauer.jpg" title="Baauer" height="250">
+					<img src="img/posters/grouplove.jpg" title="Grouplove" height="250">
+					<img src="img/posters/phantogram.jpg" title="Phantogram" height="250">
+					<p><br></p>
+				</div>
+			</div>
 		</div>
-	</div>
-	<h3> Recent Shows </h3>
-	<div class="row">		
-		<h4> 2016 - 2017: </h4>
-		<img src="img/posters/neon%20indian.png" alt="" height="250">
-		<img src="img/posters/American%20Football.png" alt="" height="250">
-		<img src="img/posters/Vince.png" alt="" height="250">
-		<img src="img/posters/noname.jpg" alt="" height="250">
-		<p><br></p>
-	</div>
-	<div class="row">		
-		<h4> 2015 - 2016: </h4>
-		<img src="img/posters/nate%20ruess.png" alt="" height="250">
-		<img src="img/posters/rae%20sremmurd.png" alt="" height="250">
-		<img src="img/posters/ryn%20weaver.png" alt="" height="250">
-		<img src="img/posters/father%20john%20misty.jpg" height="250">
-		<p><br></p>
-	</div>
-		<div class="row">		
-		<h4> 2014 - 2015: </h4>
-		<img src="img/posters/skyferreira.jpg" alt="" height="250">
-		<img src="img/posters/mac.jpg" alt="" width="250">
-		<img src="img/posters/hoodieallen.jpg" alt="" height="250">
-		<img src="img/posters/bo%20burnham.jpg" alt="" height="250">
-		<img src="img/posters/ilovemakonnen.jpg" alt="" height="250">
-		<p><br></p>
-	</div>
-	<div class="row">		
-		<h4> 2013 - 2014: </h4>
-		<img src="img/posters/caseyjames.jpg" alt="" height="250">
-		<img src="img/posters/baauer.jpg" alt="" height="250">
-		<img src="img/posters/grouplove.jpg" alt="" height="250">
-		<img src="img/posters/phantogram.jpg" alt="" height="250">
-		<p><br></p>
 	</div>
 </div>
 </section>
@@ -309,20 +350,18 @@
 				Any other questions? Contact 
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.
 			</p>
-			<p>
-				Follow us on social media for the latest Star Course updates!
-			</p>
-			<ul class="list-inline banner-social-buttons">
-				<li>
-					<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
-				</li>
-				<li>
-					<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
-				</li>
-				<li>
-					<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
-				</li>
-			</ul>
+			<p>Follow us at @starcourseuiuc for the latest Star Course updates! </p>
+				<ul class="list-inline banner-social-buttons">
+					<li>
+						<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+					</li>
+					<li>
+						<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+					</li>
+					<li>
+						<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
+					</li>
+				</ul>
 		</div>
 	</div>
 </div>
@@ -331,7 +370,13 @@
 <footer>
 <div class="container text-center">
 	<p class="credits">
-		Copyright &copy; Star Course 2017<br/>
+		Star Course, est. 1892<br>
+		University of Illinois at Urbana-Champaign<br><br>
+		<!-- <a href="https://www.star-course.com" style="border-bottom:1px dashed #ccc;">www.star-course.com</a> 
+			● <a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a><br><br> -->
+		<a href="https://www.facebook.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Facebook</a> 
+			● <a href="https://twitter.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Twitter</a> 
+			● <a href="https://instagram.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Instagram</a><br><br>
 		"Aries" Template by WowThemes.net
 	</p>
 </div>
