--- a/Website/index.html
+++ b/Website/index.html
@@ -19,9 +19,9 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-			<![endif]-->
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
 	<!-- TODO: Set favicon (browser tab icon) -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
@@ -30,23 +30,23 @@
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
 	<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
-			</button>
-			<ul class="list-inline">
-				<li>
-					<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
-				</li>
-				<li>
-					<a class="navbar-brand page-scroll" href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw fa-sm"></i></a>
-				</li>
-				<li>
-					<a class="navbar-brand page-scroll" href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw fa-sm"></i></a>
-				</li>
-				<li>
-					<a class="navbar-brand page-scroll" href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw fa-sm"></i></a>
-				</li>
-			</ul>
+		</button>
+		<ul class="list-inline">
+			<li>
+				<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
+			</li>
+			<li>
+				<a class="navbar-brand page-scroll" href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw fa-sm"></i></a>
+			</li>
+			<li>
+				<a class="navbar-brand page-scroll" href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw fa-sm"></i></a>
+			</li>
+			<li>
+				<a class="navbar-brand page-scroll" href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw fa-sm"></i></a>
+			</li>
+		</ul>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -81,11 +81,9 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">STAR COURSE</h1>
-				<p class="intro-text">
-					University of Illinois, est. 1892
-				</p>
+				<p class="intro-text">University of Illinois, est. 1892</p>
 				<a href="#events" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
+					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
 		</div>
@@ -105,16 +103,16 @@
 			<script>
 				// JavaScript for "Click to hide/show" button
 				function showPosters() {
-	   			var x = document.getElementById('posters');
-    			if (x.style.display == 'none') {	
-        		x.style.display = 'block';
+	   				var x = document.getElementById('posters');
+    					if (x.style.display == 'none') {	
+        					x.style.display = 'block';
 						document.getElementById("posterButtonI").className = "fa fa-caret-up fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to hide";
-    			} else {
-        		x.style.display = 'none';
+    					} else {
+        					x.style.display = 'none';
 						document.getElementById("posterButtonI").className = "fa fa-caret-down fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to show";
-    			}
+    					}
 				}
 			</script>
 			<p>
@@ -347,25 +345,27 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			<h2>Contact Us</h2>
 			<!-- TODO: Change contact info for senior managers -->
-			<p>	Get in touch with the Senior Management:
+			<p> 
+				Get in touch with the Senior Management:
 				<i><a href="mailto:kate.milleker@gmail.com" style="border-bottom:1px dashed #ccc;">Kate</a></i>
 				and <i><a href="mailto:nmcain430@gmail.com" style="border-bottom:1px dashed #ccc;">Nick</a></i>.
 			</p>
-			<p> Any other questions? Contact 
+			<p> 
+				Any other questions? Contact 
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.
 			</p>
-			<p>Follow us at @starcourseuiuc for the latest Star Course updates! </p>
-				<ul class="list-inline banner-social-buttons">
-					<li>
-						<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
-					</li>
-					<li>
-						<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
-					</li>
-					<li>
-						<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
-					</li>
-				</ul>
+			<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
+			<ul class="list-inline banner-social-buttons">
+				<li>
+					<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+				</li>
+				<li>
+					<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+				</li>
+				<li>
+					<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
