--- a/Website/index.html
+++ b/Website/index.html
@@ -33,18 +33,18 @@
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 		</button>
-		<ul class="list-inline">
+		<ul class="list-inline" style="width:100%;">
 			<li>
 				<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
 			</li>
 			<li>
-				<a class="navbar-brand page-scroll" href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw fa-sm"></i></a>
+				<a class="navbar-brand page-scroll" href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook"></i></a>
 			</li>
 			<li>
-				<a class="navbar-brand page-scroll" href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw fa-sm"></i></a>
+				<a class="navbar-brand page-scroll" href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter"></i></a>
 			</li>
 			<li>
-				<a class="navbar-brand page-scroll" href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw fa-sm"></i></a>
+				<a class="navbar-brand page-scroll" href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram"></i></a>
 			</li>
 		</ul>
 	</div>
