--- a/Website/index.html
+++ b/Website/index.html
@@ -33,7 +33,7 @@
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 		</button>
-		<ul class="list-inline" style="width:100%;">
+		<ul class="list-inline">
 			<li>
 				<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
 			</li>
