--- a/Website/index.html
+++ b/Website/index.html
@@ -98,7 +98,7 @@
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p>
-			<p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -<br><br></p>
+			<hr style="border-top: dotted 1px;"/><br><br></p>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
 				// JavaScript for "Click to hide/show" button
