--- a/Website/index.html
+++ b/Website/index.html
@@ -346,13 +346,9 @@
 			<h2>Contact Us</h2>
 			<!-- TODO: Change contact info for senior managers -->
 			<p> 
-				Get in touch with the Senior Management:
-				<i><a href="mailto:kate.milleker@gmail.com" style="border-bottom:1px dashed #ccc;">Kate</a></i>
-				and <i><a href="mailto:nmcain430@gmail.com" style="border-bottom:1px dashed #ccc;">Nick</a></i>.
-			</p>
-			<p> 
-				Any other questions? Contact 
-				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.
+				Any questions? Contact 
+				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br>
+				Senior Managers: Kate and Nick.
 			</p>
 			<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
 			<ul class="list-inline banner-social-buttons">
