--- a/Website/index.html
+++ b/Website/index.html
@@ -43,15 +43,6 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-				<a class="navbar-brand page-scroll" href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
-			</li>
-			<li>
-				<a class="navbar-brand page-scroll" href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
-			</li>
-			<li>
-				<a class="navbar-brand page-scroll" href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-			</li>
-			<li>
 				<a href="#intro">Home</a>
 			</li>
 			<li>
@@ -65,6 +56,15 @@
 			</li>
 			<li>
 				<a href="#contact">Contact</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
+			</li>
+			<li>
+				<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+			</li>
+			<li>
+				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
 			</li>
 		</ul>
 	</div>
