--- a/Website/index.html
+++ b/Website/index.html
@@ -58,13 +58,13 @@
 				<a href="#contact">Contact</a>
 			</li>
 			<li>
-				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
+				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw fa-lg"></i></a>
 			</li>
 			<li>
-				<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
+				<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw fa-lg"></i></a>
 			</li>
 			<li>
-				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
+				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw fa-lg"></i></a>
 			</li>
 		</ul>
 	</div>
