--- a/Website/index.html
+++ b/Website/index.html
@@ -350,7 +350,7 @@
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br>
 				Senior Managers: Kate and Nick.
 			</p>
-			<p>Follow us at @starcourseuiuc for the latest Star Course updates!</p>
+			<p>Follow @starcourseuiuc for the latest Star Course updates!</p>
 			<ul class="list-inline banner-social-buttons">
 				<li>
 					<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
