--- a/index.html
+++ b/index.html
@@ -306,10 +306,11 @@
 				<b>Hospitality:</b> Coordinates all catering and hospitality efforts for the artist.
 			</p>
 			<p>	
-				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
-				for load-in and load-out of artist equipment.
+				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Delegates front of house staffing for ushers and door guards. 
+				Works with venue and production crews for load-in and load-out of artist equipment. 
 			<p>
-				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets and helps sell band merchandise on the day of show. 
+				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution with the performance venue. Collects and sells tickets on day of show and delegates front of 
+				house staffing for ticket takers and band merchandise. 
 			</p>
 		</div>
 	</div>
