--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</button>
 		<ul class="list-inline">
 			<li>
-				<a class="navbar-brand page-scroll" href="star-course.com"> STAR COURSE at UIUC </a>
+				<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
 			</li>
 		</ul>
 	</div>
