--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="">
+	<meta name="description" content="Star Course is a live-concert promotion and production organization 
+			run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
+			in all levels of event planning to contract, promote, and stage campus entertainment.">
 	<meta name="author" content="">
+	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
 	<title>Star Course UIUC</title>
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
