--- a/index.html
+++ b/index.html
@@ -245,10 +245,12 @@
 				<b>Community:</b> Star Course is about building a community of friends around music and sharing working, learning, and social 
 				experiences. Members come into contact with hundreds of new people and are exposed to new types of music. Frequent 
 				shows, meetings, and member events give staff the opportunity build friendships and share experiences around music.
+			</p>
 			<p>
 				<b>How to Join:</b> Star Course accepts new members at the beginning of each Fall and Spring Semester. Managers are looking for new members 
 				who are interested in learning about the concert industry, willing to make the necessary time commitment for putting on 
 				shows, or simply love music. Contact us to learn more.
+			</p>
 		</div>
 	</div>
 </div>
@@ -309,11 +311,13 @@
 				<b>Hospitality:</b> Coordinates all catering and hospitality efforts for the artist.
 			</p>
 			<p>	
-				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Delegates front of house staffing for ushers and door guards. 
-				Works with venue and production crews for load-in and load-out of artist equipment. 
+				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews for 
+				load-in and load-out of artist equipment. 
 			<p>
-				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution with the performance venue. Collects and sells tickets on day of show and delegates front of 
-				house staffing for ticket takers and band merchandise. 
+				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution with the performance venue. Collects and sells tickets on day of show. 
+			</p>
+			<p>
+				<b>House and Event Services:</b> Front of house staffing for ticket takers, users, and door guards. Assists band merchandise vendors.
 			</p>
 		</div>
 	</div>
