--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!-- Template URL: http://www.free-css.com/free-css-templates/page213/aries-v1.0 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- TODO: Change image for link shared on Facebook -->
+	<meta property="og:image" content="img/grouplove_bw_icon.jpg"/>
+	<meta property="og:image:width" content="897"/>
+	<meta property="og:image:height" content="952"/>
+	<meta property="og:url" content="http://www.star-course.com/"/>
+	<meta property="og:title" content="Star Course UIUC"/>
+	<meta property="og:type" content="website"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Star Course is a live-concert promotion and production organization 
-			run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
-			in all levels of event planning to contract, promote, and stage campus entertainment.">
+		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
+		in all levels of event planning to contract, promote, and stage campus entertainment.">
 	<meta name="author" content="">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
 	<title>Star Course UIUC</title>
@@ -22,9 +29,9 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-		<![endif]-->
+					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+			<![endif]-->
 	<!-- TODO: Set favicon (browser tab icon) -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
@@ -33,14 +40,14 @@
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 <div class="container">
 	<div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
-		</button>
-		<ul class="list-inline">
-			<li>
-				<a class="navbar-brand page-scroll" href="index.html"> STAR COURSE at UIUC </a>
-			</li>
-		</ul>
+			</button>
+			<ul class="list-inline">
+				<li>
+					<a class="navbar-brand page-scroll" href="index.html">STAR COURSE at UIUC</a>
+				</li>
+			</ul>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -61,13 +68,13 @@
 				<a href="#contact">Contact</a>
 			</li>
 			<li>
-				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw fa-lg"></i></a>
+				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
 			</li>
 			<li>
-				<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw fa-lg"></i></a>
+				<a href="https://twitter.com/starcourseuiuc" target="_blank"><i class="fa fa-twitter fa-fw"></i></a>
 			</li>
 			<li>
-				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw fa-lg"></i></a>
+				<a href="https://instagram.com/starcourseuiuc" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
 			</li>
 		</ul>
 	</div>
@@ -84,9 +91,11 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<h1 class="brand-heading">STAR COURSE</h1>
-				<p class="intro-text">University of Illinois, est. 1892</p>
+				<p class="intro-text">
+					University of Illinois, est. 1892
+				</p>
 				<a href="#events" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
+				<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
 		</div>
@@ -101,21 +110,21 @@
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p>
-			<hr style="border-top: dotted 1px;"/><br><br></p>
+			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
 				// JavaScript for "Click to hide/show" button
 				function showPosters() {
-	   				var x = document.getElementById('posters');
-    					if (x.style.display == 'none') {	
-        					x.style.display = 'block';
+	   			var x = document.getElementById('posters');
+    			if (x.style.display == 'none') {	
+        		x.style.display = 'block';
 						document.getElementById("posterButtonI").className = "fa fa-caret-up fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to hide";
-    					} else {
-        					x.style.display = 'none';
+    			} else {
+        		x.style.display = 'none';
 						document.getElementById("posterButtonI").className = "fa fa-caret-down fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to show";
-    					}
+    			}
 				}
 			</script>
 			<p>
@@ -245,12 +254,10 @@
 				<b>Community:</b> Star Course is about building a community of friends around music and sharing working, learning, and social 
 				experiences. Members come into contact with hundreds of new people and are exposed to new types of music. Frequent 
 				shows, meetings, and member events give staff the opportunity build friendships and share experiences around music.
-			</p>
 			<p>
 				<b>How to Join:</b> Star Course accepts new members at the beginning of each Fall and Spring Semester. Managers are looking for new members 
 				who are interested in learning about the concert industry, willing to make the necessary time commitment for putting on 
 				shows, or simply love music. Contact us to learn more.
-			</p>
 		</div>
 	</div>
 </div>
@@ -311,13 +318,10 @@
 				<b>Hospitality:</b> Coordinates all catering and hospitality efforts for the artist.
 			</p>
 			<p>	
-				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews for 
-				load-in and load-out of artist equipment. 
+				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
+				for load-in and load-out of artist equipment.
 			<p>
-				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution with the performance venue. Collects and sells tickets on day of show. 
-			</p>
-			<p>
-				<b>House and Event Services:</b> Front of house staffing for ticket takers, users, and door guards. Assists band merchandise vendors.
+				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets and helps sell band merchandise on the day of show. 
 			</p>
 		</div>
 	</div>
@@ -353,23 +357,22 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			<h2>Contact Us</h2>
 			<!-- TODO: Change contact info for senior managers -->
-			<p> 
-				Any questions? Contact 
+			<p> Any questions? Contact 
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br>
 				Senior Managers: Kate and Nick.
 			</p>
-			<p>Follow @starcourseuiuc for the latest Star Course updates!</p>
-			<ul class="list-inline banner-social-buttons">
-				<li>
-					<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
-				</li>
-				<li>
-					<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
-				</li>
-				<li>
-					<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
-				</li>
-			</ul>
+			<p>Follow us at @starcourseuiuc for the latest Star Course updates! </p>
+				<ul class="list-inline banner-social-buttons">
+					<li>
+						<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+					</li>
+					<li>
+						<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+					</li>
+					<li>
+						<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
+					</li>
+				</ul>
 		</div>
 	</div>
 </div>
