--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image" content="img/grouplove_bw_icon.jpg"/>
+	<meta property="og:image" content="uploads/img/grouplove_bw_icon.jpg"/>
 	<meta property="og:image:width" content="897"/>
 	<meta property="og:image:height" content="952"/>
 	<meta property="og:title" content="Star Course UIUC"/>
 	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="star-course.com"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
