--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:image:height" content="952"/>
 	<meta property="og:title" content="Star Course UIUC"/>
 	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="star-course.com"/>
+	<meta property="og:url" content="http://star-course.com"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
