--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image" content="uploads/img/grouplove_bw_icon.jpg"/>
+	<meta property="og:image" content="/img/grouplove_bw_icon.jpg"/>
 	<meta property="og:image:width" content="897"/>
 	<meta property="og:image:height" content="952"/>
 	<meta property="og:title" content="Star Course UIUC"/>
