--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
 		in all levels of event planning to contract, promote, and stage campus entertainment.">
-	<!--<meta property="og:url" content="http://star-course.com"/>-->
+	<meta property="og:url" content="http://star-course.com"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
