--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:title" content="Star Course UIUC"/>
-	<meta property="og:type" content="website"/>
-	<meta property="og:url" content="http://star-course.com"/>
+	<!-- <meta property="og:type" content="website"/>
+	<meta property="og:url" content="http://star-course.com"/> -->
 	<!-- TODO: Change image for link shared on Facebook -->
 	<meta property="og:image" content="/uploads/img/grouplove_bw_icon.jpg"/>
 	<meta property="og:image:width" content="200"/>
