--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <meta property="og:type" content="website"/> -->
 	<meta property="og:url" content="http://star-course.com"/> 
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image" content="/uploads/img/grouplove_bw_icon.jpg"/>
+	<meta property="og:image" content="https://www.facebook.com/starcourseuiuc/photos/a.119059648146151.25000.119059388146177/1500314126687356/?type=1&theater"/>
 	<meta property="og:image:width" content="200"/>
 	<meta property="og:image:height" content="200"/>
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
