--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<!-- <meta property="og:type" content="website"/> -->
 	<meta property="og:url" content="http://star-course.com"/> 
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image:url" content="https://www.facebook.com/starcourseuiuc/photos/a.119059648146151.25000.119059388146177/1500314126687356/?type=1&theater"/>
-	<meta property="og:image:width" content="200"/>
-	<meta property="og:image:height" content="200"/>
+	<meta property="og:image:url" content="star-course.com/grouplove_bw.jpg"/>
+	<meta property="og:image:width" content="1200"/>
+	<meta property="og:image:height" content="627"/>
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
 		in all levels of event planning to contract, promote, and stage campus entertainment.">
