--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <meta property="og:type" content="website"/> -->
 	<meta property="og:url" content="http://star-course.com"/> 
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image" content="https://github.com/starcourse/starcourse.github.com/blob/master/website_icon.jpg"/>
+	<meta property="og:image" content="starcourse.github.com/website_icon.jpg"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="627"/>
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
@@ -325,8 +325,13 @@
 			<p>	
 				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
 				for load-in and load-out of artist equipment.
+			</p>
 			<p>
-				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets and helps sell band merchandise on the day of show. 
+				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show. 
+			</p>
+			<p>
+				<b>House and Event Services:</b> Front of house staffing for day of show responsibilities including ushers, ticket takers, door guards,
+				and assistants to merchandise vendors. 
 			</p>
 		</div>
 	</div>
@@ -362,22 +367,25 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			<h2>Contact Us</h2>
 			<!-- TODO: Change contact info for senior managers -->
-			<p> Any questions? Contact 
+			<p> 
+				Any questions? Contact 
 				<i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>.<br>
 				Senior Managers: Kate and Nick.
 			</p>
-			<p>Follow us at @starcourseuiuc for the latest Star Course updates! </p>
-				<ul class="list-inline banner-social-buttons">
-					<li>
-						<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
-					</li>
-					<li>
-						<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
-					</li>
-					<li>
-						<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
-					</li>
-				</ul>
+			<p>
+				Follow us at @starcourseuiuc for the latest Star Course updates!
+			</p>
+			<ul class="list-inline banner-social-buttons">
+				<li>
+					<a href="https://www.facebook.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-facebook fa-fw"></i><span class="network-name">Facebook</span></a>
+				</li>
+				<li>
+					<a href="https://twitter.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name">Twitter</span></a>
+				</li>
+				<li>
+					<a href="https://instagram.com/starcourseuiuc" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-instagram fa-fw"></i><span class="network-name">Instagram</span></a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
