--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- <meta property="og:type" content="website"/> -->
 	<meta property="og:url" content="http://star-course.com"/> 
 	<!-- TODO: Change image for link shared on Facebook -->
-	<meta property="og:image" content="starcourse.github.com/website_icon.jpg"/>
+	<meta property="og:image" content="https://github.com/starcourse/starcourse.github.com/blob/master/website_icon.jpg?raw=true"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="627"/>
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
